git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12457 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 9772c85637b52541aec5c5857a6bf9147792ed73

--- a/art2_projects/pom.xml
+++ b/art2_projects/pom.xml
@@ -26,15 +26,17 @@
 	
     <modules>
         <module>org.kermeta.art2.root</module>
-        <module>org.kermeta.art2.annotation</module>
         <module>org.kermeta.art2.model</module>
+        <!--
+        <module>org.kermeta.art2.annotation</module>
+        
         <module>org.kermeta.art2.adaptation.model</module>
         <module>org.kermeta.art2.api</module>
         <module>org.kermeta.art2.core</module>
         <module>org.kermeta.art2.framework</module>
         <module>org.kermeta.art2.framework.bus.netty</module>
         <module>org.kermeta.art2.deploy.osgi</module>
-        <module>org.kermeta.art2.kompare</module>
+        <module>org.kermeta.art2.kompare</module>-->
     </modules>
 
 	
