git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12458 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 1ae34041482efeb047202b81e3b06569a0f8e7e4

--- a/art2_projects/pom.xml
+++ b/art2_projects/pom.xml
@@ -27,6 +27,7 @@
     <modules>
         <module>org.kermeta.art2.root</module>
         <module>org.kermeta.art2.model</module>
+        <module>org.kermeta.art2.adaptation.model</module>
         <!--
         <module>org.kermeta.art2.annotation</module>
         
