git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12459 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 121817a81dad5261f3e3b348d5f1a39171eb4c5d

--- a/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>org.kermeta.art2</groupId>
             <artifactId>art2.model</artifactId>
-            <version>${art2.version}</version>
+            <version>[${art2.version},)</version>
         </dependency>
     </dependencies>
 
