--- a/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>org.kermeta.art2</groupId>
             <artifactId>art2.model</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>[0,10)</version>
         </dependency>
     </dependencies>
 
