git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12463 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 2aa61f348fe7e9897fce9fa0f0eab203edcb9511

--- a/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
@@ -16,6 +16,10 @@
     </parent>
 
 
+<properties>
+    <art2v>2.0.0</art2v>
+</properties>
+
     <build>
         <sourceDirectory>src</sourceDirectory>
         <plugins>
@@ -51,7 +55,7 @@
         <dependency>
             <groupId>org.kermeta.art2</groupId>
             <artifactId>art2.model</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>${art2v}-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
