--- a/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
@@ -16,9 +16,9 @@
     </parent>
 
 
-<properties>
-    <art2v>2.0.0</art2v>
-</properties>
+    <properties>
+        <art2v>2.0.0</art2v>
+    </properties>
 
     <build>
         <sourceDirectory>src</sourceDirectory>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.kermeta.art2</groupId>
             <artifactId>art2.model</artifactId>
-            <version>${art2v}-SNAPSHOT</version>
+            <version>[2.0.0-SNAPSHOT,)</version>
         </dependency>
     </dependencies>
 
