--- a/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.kermeta.art2</groupId>
             <artifactId>art2.model</artifactId>
-            <version>[2.0.0-SNAPSHOT,)</version>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
