--- a/art2_projects/org.kermeta.art2.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.model/pom.xml
@@ -10,7 +10,7 @@
 
 
     <groupId>${project.parent.groupId}</groupId>
-    <version>${art2.version}</version>
+    <version>2.0.0-SNAPSHOT</version>
 
     <parent>
         <artifactId>art2.root</artifactId>
