--- a/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
@@ -1,4 +1,3 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -7,7 +6,7 @@
     <packaging>bundle</packaging>
 
     <groupId>${parent.groupId}</groupId>
-    <version>${art2.version}</version>
+    <version>2.0.0-SNAPSHOT</version>
 
     <parent>
         <artifactId>art2.root</artifactId>
@@ -15,10 +14,6 @@
         <version>2</version>
     </parent>
 
-
-    <properties>
-        <art2v>2.0.0</art2v>
-    </properties>
 
     <build>
         <sourceDirectory>src</sourceDirectory>
