--- a/art2_projects/org.kermeta.art2.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.root/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <art2.version>${project.version}</art2.version>
+        <art2.version>2.1.0-SNAPSHOT</art2.version>
         <emf.version>2.6.0</emf.version>
         <scala.version>2.8.0</scala.version>
         <slf4j.version>1.6.1</slf4j.version>
