--- a/art2_projects/org.kermeta.art2.core/pom.xml
+++ b/art2_projects/org.kermeta.art2.core/pom.xml
@@ -7,13 +7,14 @@
     <name>ART2 :: Core</name>
 
     <groupId>${parent.groupId}</groupId>
-    <version>${art2.version}</version>
+    <version>2.1.0-SNAPSHOT</version>
 
     <parent>
         <artifactId>art2.root</artifactId>
         <groupId>org.kermeta.art2</groupId>
-        <version>2</version>
+        <version>2.1.0-SNAPSHOT</version>
     </parent>
+    
     <dependencies>
         <dependency>
             <groupId>${parent.groupId}</groupId>
@@ -53,11 +54,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.6.1</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>art2.framework.bus.netty</artifactId>
-            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
