--- a/art2_projects/org.kermeta.art2.kompare/pom.xml
+++ b/art2_projects/org.kermeta.art2.kompare/pom.xml
@@ -7,12 +7,12 @@
     <name>ART2 :: Kompare</name>
 
     <groupId>${parent.groupId}</groupId>
-    <version>${art2.version}</version>
+    <version>2.1.0-SNAPSHOT</version>
 
     <parent>
         <artifactId>art2.root</artifactId>
         <groupId>org.kermeta.art2</groupId>
-        <version>2</version>
+        <version>2.1.0-SNAPSHOT</version>
     </parent>
 
     <build>
