--- a/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
@@ -5,14 +5,15 @@
     <groupId>org.kermeta.art2</groupId>
     <artifactId>art2.artcomponent.root</artifactId>
     <packaging>pom</packaging>
-    <version>2</version>
     <name>ART2 :: ArtComponent</name>
     <url>http://maven.apache.org</url>
+
+    <version>2.1.0-SNAPSHOT</version>
 
     <parent>
         <artifactId>art2.root</artifactId>
         <groupId>org.kermeta.art2</groupId>
-        <version>2</version>
+        <version>2.1.0-SNAPSHOT</version>
     </parent>
     
     <build>
