--- a/art2_projects/org.kermeta.art2.framework.bus.netty/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework.bus.netty/pom.xml
@@ -56,6 +56,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-ClassPath>.</Bundle-ClassPath>
+                        <Bundle-Activator>org.kermeta.art2.framework.bus.netty.Art2BusNettyActivator</Bundle-Activator>
                         <Import-Package>!org.jboss.netty.*,org.kermeta.art2.*,*;resolution:=optional</Import-Package>
                         <Private-Package>org.kermeta.art2.framework.bus.netty</Private-Package>
                         <Dynamic-ImportPackage>*</Dynamic-ImportPackage>
