git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12503 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 301516c405c96d512378b2f71bf9e7d269ca258d

--- a/art2_projects/org.kermeta.art2.kompare/pom.xml
+++ b/art2_projects/org.kermeta.art2.kompare/pom.xml
@@ -25,8 +25,8 @@
                 <configuration>
                     <instructions>
                         <Bundle-Activator>org.kermeta.art2.kompare.Art2KompareActivator</Bundle-Activator>
-                        <Export-Package>org.kermeta.art2.kompare.*</Export-Package>
-                        <Import-Package>*</Import-Package>
+                        <Import-Package>!org.kermeta.art2.kompare.*,*</Import-Package>
+                        <Private-Package>org.kermeta.art2.kompare.*</Private-Package>
                     </instructions>
                 </configuration>
             </plugin>
