--- a/art2_projects/org.kermeta.art2.ui.framework/pom.xml
+++ b/art2_projects/org.kermeta.art2.ui.framework/pom.xml
@@ -8,14 +8,11 @@
     <artifactId>art2.ui.framework</artifactId>
     <packaging>bundle</packaging>
     <name>ART2 :: UI FRAMEWORK</name>
-    
-    <groupId>${parent.groupId}</groupId>
-    <version>${art2.version}</version>
 
     <parent>
         <artifactId>art2.root</artifactId>
         <groupId>org.kermeta.art2</groupId>
-        <version>2</version>
+        <version>2.1.0-SNAPSHOT</version>
     </parent>
 
     <build>
