git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12525 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: b2a627723b7219b9490a69717e070300c119f029

--- a/art2_projects/org.kermeta.art2.kompare/pom.xml
+++ b/art2_projects/org.kermeta.art2.kompare/pom.xml
@@ -6,9 +6,6 @@
     <packaging>bundle</packaging>
     <name>ART2 :: Kompare</name>
 
-    <groupId>${parent.groupId}</groupId>
-    <version>2.1.0-SNAPSHOT</version>
-
     <parent>
         <artifactId>art2.root</artifactId>
         <groupId>org.kermeta.art2</groupId>
@@ -36,24 +33,24 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.api</artifactId>
-            <version>${project.version}</version>
+            <version>${art2.version}</version>
         </dependency>
         <dependency>
             <artifactId>art2.adaptation.model</artifactId>
             <groupId>org.kermeta.art2</groupId>
             <type>jar</type>
-            <version>${project.version}</version>
+            <version>${art2.version}</version>
         </dependency>
         <dependency>
             <artifactId>art2.model</artifactId>
             <groupId>org.kermeta.art2</groupId>
             <type>jar</type>
-            <version>${project.version}</version>
+            <version>${art2.version}</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.framework</artifactId>
-            <version>${project.version}</version>
+            <version>${art2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
