--- a/art2_projects/org.kermeta.art2.framework.bus.netty/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework.bus.netty/pom.xml
@@ -5,10 +5,6 @@
     <artifactId>art2.framework.bus.netty</artifactId>
     <packaging>bundle</packaging>
     <name>ART2 :: Framework :: Bus :: Netty</name>
-    <url>http://maven.apache.org</url>
-
-    <groupId>${parent.groupId}</groupId>
-    <version>2.1.0-SNAPSHOT</version>
 
     <parent>
         <artifactId>art2.root</artifactId>
@@ -27,12 +23,12 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.6.1</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.6.1</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -42,7 +38,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.api</artifactId>
-            <version>${project.version}</version>
+            <version>${art2.version}</version>
         </dependency>
     </dependencies>
 
