--- a/art2_projects/org.kermeta.art2.framework/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework/pom.xml
@@ -5,9 +5,6 @@
     <packaging>bundle</packaging>
     <name>ART2 :: Framework</name>
 
-    <groupId>${project.parent.groupId}</groupId>
-    <version>2.1.0-SNAPSHOT</version>
-
     <parent>
         <artifactId>art2.root</artifactId>
         <groupId>org.kermeta.art2</groupId>
@@ -65,7 +62,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.api</artifactId>
-            <version>${project.version}</version>
+            <version>${art2.version}</version>
         </dependency>
     </dependencies>
 
