--- a/art2_projects/org.kermeta.art2.deploy.osgi/pom.xml
+++ b/art2_projects/org.kermeta.art2.deploy.osgi/pom.xml
@@ -6,9 +6,6 @@
     <packaging>bundle</packaging>
     <name>ART2 :: Deploy :: OSGI</name>
 
-    <groupId>${parent.groupId}</groupId>
-    <version>2.1.0-SNAPSHOT</version>
-
     <parent>
         <artifactId>art2.root</artifactId>
         <groupId>org.kermeta.art2</groupId>
@@ -48,7 +45,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.adaptation.model</artifactId>
-            <version>${project.version}</version>
+            <version>${art2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
@@ -64,7 +61,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.framework</artifactId>
-            <version>${project.version}</version>
+            <version>${art2.version}</version>
         </dependency>
         <dependency>
             <groupId>${parent.groupId}</groupId>
