--- a/art2_projects/org.kermeta.art2.core/pom.xml
+++ b/art2_projects/org.kermeta.art2.core/pom.xml
@@ -6,9 +6,6 @@
     <packaging>bundle</packaging>
     <name>ART2 :: Core</name>
 
-    <groupId>${parent.groupId}</groupId>
-    <version>2.1.0-SNAPSHOT</version>
-
     <parent>
         <artifactId>art2.root</artifactId>
         <groupId>org.kermeta.art2</groupId>
@@ -53,7 +50,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.6.1</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
