--- a/art2_projects/org.kermeta.art2.api/pom.xml
+++ b/art2_projects/org.kermeta.art2.api/pom.xml
@@ -7,9 +7,6 @@
     <packaging>bundle</packaging>
     <name>ART2 :: API</name>
 
-    <groupId>${project.parent.groupId}</groupId>
-    <version>2.1.0-SNAPSHOT</version>
-
     <parent>
         <artifactId>art2.root</artifactId>
         <groupId>org.kermeta.art2</groupId>
@@ -35,7 +32,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.model</artifactId>
-            <version>${project.version}</version>
+            <version>${art2.version}</version>
         </dependency>
 
     </dependencies>
