--- a/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.adaptation.model/pom.xml
@@ -5,9 +5,6 @@
     <name>ART2 :: ADAPTATION :: MODEL</name>
     <packaging>bundle</packaging>
 
-    <groupId>${parent.groupId}</groupId>
-    <version>2.1.0-SNAPSHOT</version>
-
     <parent>
         <artifactId>art2.root</artifactId>
         <groupId>org.kermeta.art2</groupId>
@@ -18,7 +15,6 @@
     <build>
         <sourceDirectory>src</sourceDirectory>
         <plugins>
-
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
@@ -50,7 +46,7 @@
         <dependency>
             <groupId>org.kermeta.art2</groupId>
             <artifactId>art2.model</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>${art2.version}</version>
         </dependency>
     </dependencies>
 
