git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12543 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 61e87d17a5e6e9c976ef2867144806b5f1cc5059

--- a/art2_projects/build.xml
+++ b/art2_projects/build.xml
@@ -68,9 +68,13 @@
 	
 	<target name="deploy_release_version">
 		<echo>Deploying release version ${release.version}</echo>
-		<artifact:mvn pom="pom.xml">
+		<!-- <artifact:mvn pom="pom.xml">
 			<arg value="deploy" />
-		</artifact:mvn>
+		</artifact:mvn> -->
+		<exec executable="mvn">
+			<arg value="clean" />
+			<arg value="deploy" />
+		</exec>
 	</target>
 	
 	<target name="tag_release_version">
