git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12546 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: f7e5db31aead6ec9ffcf6ac22f7b21e16285e924

--- a/art2_projects/build.xml
+++ b/art2_projects/build.xml
@@ -44,6 +44,7 @@
 		</antcall>
 		<antcall target="commit_dev_version">
 		</antcall>
+		<antcall target="deploy_dev_version"></antcall>
 	</target>
 
 	<target name="change_to_release_version">
@@ -139,6 +140,13 @@
 			<arg value="." />
 			<arg value="-m" />
 			<arg value="&quot;Creating ${next.development.version} development version.&quot;" />
+		</exec>
+	</target>
+	<target name="deploy_dev_version">
+		<echo>Deploying snapshot version ${next.development.version}</echo>		
+		<exec executable="mvn">
+			<arg value="clean" />
+			<arg value="deploy" />
 		</exec>
 	</target>
 </project>
