--- a/art2_projects/pom.xml
+++ b/art2_projects/pom.xml
@@ -27,17 +27,20 @@
     <modules>
         <module>org.kermeta.art2.root</module>
         <module>org.kermeta.art2.model</module>
+        <!-- <module>org.kermeta.art2.model.edit</module>
+        <module>org.kermeta.art2.model.editor</module> -->
+        <!-- <module>org.kermeta.art2.editor.eclipse</module> -->
+        <!-- <module>org.kermeta.art2.editor.nb</module> -->
         <module>org.kermeta.art2.adaptation.model</module>
-        <!--
+        
         <module>org.kermeta.art2.annotation</module>
         
-        <module>org.kermeta.art2.adaptation.model</module>
         <module>org.kermeta.art2.api</module>
-        <module>org.kermeta.art2.core</module>
         <module>org.kermeta.art2.framework</module>
+        <module>org.kermeta.art2.core</module>
         <module>org.kermeta.art2.framework.bus.netty</module>
         <module>org.kermeta.art2.deploy.osgi</module>
-        <module>org.kermeta.art2.kompare</module>-->
+        <module>org.kermeta.art2.kompare</module>
     </modules>
 
 	
