git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12553 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 97cedd6920c560ed958c59945c11c368cd8aaf0b

--- a/art2_projects/pom.xml
+++ b/art2_projects/pom.xml
@@ -26,6 +26,7 @@
 	
     <modules>
         <module>org.kermeta.art2.root</module>
+        <module>org.kermeta.art2.artcomponent.root</module>
         <module>org.kermeta.art2.model</module>
         <!-- <module>org.kermeta.art2.model.edit</module>
         <module>org.kermeta.art2.model.editor</module> -->
