--- a/art2_projects/pom.xml
+++ b/art2_projects/pom.xml
@@ -42,6 +42,7 @@
         <module>org.kermeta.art2.framework.bus.netty</module>
         <module>org.kermeta.art2.deploy.osgi</module>
         <module>org.kermeta.art2.kompare</module>
+        <module>org.kermeta.art2.platform.felix</module>
     </modules>
 
 	
