--- a/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
+++ b/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
@@ -1,12 +1,22 @@
+<!-- $Id: $ -->
+<!-- License    : EPL                                    -->
+<!-- Project    : org.kermeta.utils.slf4j.eclipse -->
+<!-- Copyright  : IRISA / INRIA / Universite de Rennes 1 --> 
+<!-- Authors : Haja Rambelontsalama <hrambelo@irisa.fr> --> 
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.kermeta.utils</groupId>
 	<artifactId>utils.slf4j.eclipse</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>Utils :: SLF4J eclipse</name>
 	
+	<parent>
+		<groupId>org.kermeta.language</groupId>
+        <artifactId>language.root</artifactId>
+        <version>2.0.0</version>
+	</parent>
 		
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -222,38 +232,9 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>[1.2.13,2.0.0)</version>
+			<version>1.2.14</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
-
-	<repositories>
-
-        <repository>
-            <id>Kermeta Public</id>
-            <url>http://www.kermeta.org/maven2</url>
-        </repository>
-        <repository>
-            <id>Kermeta Public SnapShots</id>
-            <url>http://www.kermeta.org/maven2-snapshots</url>
-        </repository>
-    </repositories>
-
-
-
-    <distributionManagement>
-        <repository>
-            <id>tipimouss-local-maven-repository</id>
-            <name>Tipimouss Local release repository</name>
-            <url>file:/var/www/html/maven2</url>
-            <uniqueVersion>false</uniqueVersion>
-        </repository>
-        <snapshotRepository>
-            <id>tipimouss-local-maven-repository</id>
-            <name>Tipimouss Local  snapshot repository</name>
-            <url>file:/var/www/html/maven2-snapshots</url>
-            <uniqueVersion>false</uniqueVersion>
-        </snapshotRepository>
-    </distributionManagement>
 </project>
