git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12636 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 7a372c3344311e0cd23e55bf3d1b04a211bba830

--- a/art2_projects/org.kermeta.art2.platform.felix/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.felix/pom.xml
@@ -148,6 +148,13 @@
             <artifactId>art2.framework.bus.netty</artifactId>
             <version>${project.version}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>art2.framework.bus.jmdns</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        
     </dependencies>
 
 </project>
