--- a/art2_projects/org.kermeta.art2.deploy.osgi/pom.xml
+++ b/art2_projects/org.kermeta.art2.deploy.osgi/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>art2.api</artifactId>
             <version>${art2.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>art2.framework.bus.netty</artifactId>
+            <version>${art2.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
