Add Platform Helpers
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12689 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 8fc7c469c7dac3c5c306260d64101e51fa387d90

--- a/art2_projects/org.kermeta.art2.framework.bus.jmdns/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework.bus.jmdns/pom.xml
@@ -23,7 +23,7 @@
                     <instructions>
                         <Bundle-ClassPath>.</Bundle-ClassPath>
                         <Bundle-Activator>org.kermeta.art2.framework.bus.jmdns.Art2JmDNSActivator</Bundle-Activator>
-                        <Import-Package>!org.junit.*,!org.kermeta.art2.framework.bus.jmdns.*,!junit.*,!org.easymock.*,*</Import-Package>
+                        <Import-Package>!org.junit.*,!org.kermeta.art2.framework.bus.jmdns.*,!junit.*,!org.easymock.*,org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
                         <Private-Package>org.kermeta.art2.framework.bus.jmdns.*,javax.jmdns.*</Private-Package>
                         <Dynamic-ImportPackage>*</Dynamic-ImportPackage>
                         <Export-Package></Export-Package>
