Add Platform Helpers
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12690 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 983cd527f1fb803dc4bd74280c32c3d5d18414d0

--- a/art2_projects/org.kermeta.art2.framework.bus.netty/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework.bus.netty/pom.xml
@@ -52,7 +52,7 @@
                     <instructions>
                         <Bundle-ClassPath>.</Bundle-ClassPath>
                         <Bundle-Activator>org.kermeta.art2.framework.bus.netty.Art2BusNettyActivator</Bundle-Activator>
-                        <Import-Package>!org.jboss.netty.*,org.kermeta.art2.*,*;resolution:=optional</Import-Package>
+                        <Import-Package>!org.jboss.netty.*,org.kermeta.art2.*,org.slf4j.*;version="${slf4j.version.range}",*;resolution:=optional</Import-Package>
                         <Private-Package>org.kermeta.art2.framework.bus.netty</Private-Package>
                         <Dynamic-ImportPackage>*</Dynamic-ImportPackage>
                         <Export-Package>org.kermeta.art2.framework.bus.netty.remote,org.jboss.netty.*;version=3.2</Export-Package>
