--- a/art2_projects/org.kermeta.art2.kompare/pom.xml
+++ b/art2_projects/org.kermeta.art2.kompare/pom.xml
@@ -22,7 +22,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-Activator>org.kermeta.art2.kompare.Art2KompareActivator</Bundle-Activator>
-                        <Import-Package>!org.kermeta.art2.kompare.*,*</Import-Package>
+                        <Import-Package>!org.kermeta.art2.kompare.*,org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
                         <Private-Package>org.kermeta.art2.kompare.*</Private-Package>
                     </instructions>
                 </configuration>
