--- a/art2_projects/org.kermeta.art2.deploy.osgi/pom.xml
+++ b/art2_projects/org.kermeta.art2.deploy.osgi/pom.xml
@@ -23,7 +23,7 @@
                 <configuration>
                     <instructions>
                         <Export-Package></Export-Package>
-                        <Import-Package>*</Import-Package>
+                        <Import-Package>org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
                         <Private-Package>org.kermeta.art2.adaptation.deploy.*</Private-Package>
                         <Bundle-ClassPath>.</Bundle-ClassPath>
                         <Bundle-Activator>org.kermeta.art2.adaptation.deploy.osgi.Art2DeployActivator</Bundle-Activator>
