Add Platform Helpers
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12694 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 3facccd1bbf755aa3295a977d0eacaa5ef22d5de

--- a/art2_projects/org.kermeta.art2.core/pom.xml
+++ b/art2_projects/org.kermeta.art2.core/pom.xml
@@ -69,7 +69,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-ClassPath>.</Bundle-ClassPath>
-                        <Import-Package>*</Import-Package>
+                        <Import-Package>org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
                         <Private-Package>
                             org.kermeta.art2.core.impl
                         </Private-Package>
