--- a/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
+++ b/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
@@ -1,4 +1,4 @@
-<!-- $Id: $ -->
+<!-- $Id$ -->
 <!-- License    : EPL                                    -->
 <!-- Project    : org.kermeta.utils.slf4j.eclipse -->
 <!-- Copyright  : IRISA / INRIA / Universite de Rennes 1 --> 
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.kermeta.language</groupId>
         <artifactId>language.root</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.0-SNAPSHOT</version>
 	</parent>
 		
 	<build>
@@ -115,11 +115,6 @@
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
                         <!-- Use Require-Bundle dependencies only for bundles for we don't have control and that may introduce splitted package issue ex: org.eclipse.core.runtime -->
                         <Require-Bundle>
-                    		org.eclipse.ui,
- 							org.eclipse.core.runtime,
- 							org.eclipse.core.resources,
- 							org.eclipse.core.jobs,
- 							org.eclipse.equinox.preferences
                         </Require-Bundle>
                         <_versionpolicy>[${version;==;${@}},${version;+;${@}})</_versionpolicy>
                         
@@ -128,6 +123,7 @@
 							!org.eclipse.ui.*,
 							!org.eclipse.jface.*,
 							!org.eclipse.swt.*,
+							org.eclipse.equinox.preferences,
 							org.osgi.framework;version="[1.5,2)",		
 							org.apache.log4j.*
                         </Import-Package>
