Add Platform Helpers
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12714 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 61fbc00ef438cf6f834cbcc87ec68b46607bb445

--- a/art2_projects/org.kermeta.art2.framework/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework/pom.xml
@@ -29,7 +29,7 @@
             <version>${art2.version}</version>
         </dependency>
 
-
+<!--
         <dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
@@ -38,7 +38,7 @@
             <optional>true</optional>
             <systemPath>${java.home}/../lib/tools.jar</systemPath>
         </dependency>
-   
+   -->
 
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
@@ -79,7 +79,7 @@
                     <instructions>
                         <Private-Package></Private-Package>
                         <Bundle-SymbolicName>org.kermeta.art2.framework</Bundle-SymbolicName>
-                        <Import-Package>!org.joda.*,!com.sun.*,!org.kermeta.art2.annotation,!org.codehaus.jackson.*,org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
+                        <Import-Package>!org.w3c.dom.ls,!org.w3c.dom.bootstrap,!org.joda.*,!com.sun.*,!org.kermeta.art2.annotation,!org.codehaus.jackson.*,org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
                         <Export-Package>org.kermeta.art2.framework,org.kermeta.art2.framework.*,org.codehaus.jackson.*</Export-Package>
                     </instructions>
                 </configuration>
