switch to 2.1.1-SNAPSHOT
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12726 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 1c1087c5837d2cc10b0073e06cab3ee44455ba31

--- a/art2_projects/org.kermeta.art2.model.edit/plugin.properties
+++ b/art2_projects/org.kermeta.art2.model.edit/plugin.properties
@@ -127,3 +127,36 @@ _UI_ContainerRoot_thirdParties_feature = Third Parties
 _UI_TypedElement_genericTypes_feature = Generic Types
 _UI_DeployUnit_url_feature = Url
 _UI_ContainerRoot_libraries_feature = Libraries
+_UI_TypeLibrary_type = Type Library
+_UI_Channel_type = Channel
+_UI_NodeType_type = Node Type
+_UI_NodeNetwork_type = Node Network
+_UI_NodeLink_type = Node Link
+_UI_NetworkProperty_type = Network Property
+_UI_ChannelType_type = Channel Type
+_UI_TypeDefinition_type = Type Definition
+_UI_Instance_type = Instance
+_UI_ContainerNode_type_feature = Type
+_UI_ContainerRoot_typeDefinitions_feature = Type Definitions
+_UI_ContainerRoot_hubs_feature = Hubs
+_UI_ContainerRoot_deployUnits_feature = Deploy Units
+_UI_ContainerRoot_nodeNetworks_feature = Node Networks
+_UI_TypeLibrary_subTypes_feature = Sub Types
+_UI_NodeType_bootstrap_feature = Bootstrap
+_UI_NodeNetwork_link_feature = Link
+_UI_NodeNetwork_initBy_feature = Init By
+_UI_NodeNetwork_target_feature = Target
+_UI_NodeLink_networkType_feature = Network Type
+_UI_NodeLink_estimatedRate_feature = Estimated Rate
+_UI_NodeLink_networkProperties_feature = Network Properties
+_UI_NodeLink_lastCheck_feature = Last Check
+_UI_NetworkProperty_value_feature = Value
+_UI_NetworkProperty_lastCheck_feature = Last Check
+_UI_ChannelType_startMethod_feature = Start Method
+_UI_ChannelType_stopMethod_feature = Stop Method
+_UI_TypeDefinition_deployUnit_feature = Deploy Unit
+_UI_TypeDefinition_factoryBean_feature = Factory Bean
+_UI_TypeDefinition_bean_feature = Bean
+_UI_TypeDefinition_requiredLibs_feature = Required Libs
+_UI_TypeDefinition_hashcode_feature = Hashcode
+_UI_Instance_typeDefinition_feature = Type Definition
