--- a/art2_projects/org.kermeta.art2.model.edit/pom.xml
+++ b/art2_projects/org.kermeta.art2.model.edit/pom.xml
@@ -1,4 +1,4 @@
-<!-- $Id:$ -->
+<!-- $Id$ -->
 <!-- License    : EPL 									 -->
 <!-- Copyright  : IRISA / INRIA / Universite de Rennes 1 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -9,13 +9,11 @@
     <packaging>bundle</packaging>
 
 
-    <groupId>${parent.groupId}</groupId>
-    <version>${art2.version}</version>
 
     <parent>
         <artifactId>art2.root</artifactId>
         <groupId>org.kermeta.art2</groupId>
-        <version>2</version>
+        <version>2.1.1-SNAPSHOT</version>
     </parent>
 
 	
