--- a/art2_projects/org.kermeta.art2.model.editor/pom.xml
+++ b/art2_projects/org.kermeta.art2.model.editor/pom.xml
@@ -9,13 +9,11 @@
     <packaging>bundle</packaging>
 
 
-    <groupId>${parent.groupId}</groupId>
-    <version>${art2.version}</version>
 
     <parent>
         <artifactId>art2.root</artifactId>
         <groupId>org.kermeta.art2</groupId>
-        <version>2</version>
+        <version>2.1.1-SNAPSHOT</version>
     </parent>
 
 	
