--- a/art2_projects/org.kermeta.art2.platform.felix/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.felix/pom.xml
@@ -87,7 +87,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.kompare</artifactId>
-            <version>${project.version}</version>
+            <version>${art2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
@@ -146,13 +146,13 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.framework.bus.netty</artifactId>
-            <version>${project.version}</version>
+            <version>${art2.version}</version>
         </dependency>
         
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.framework.bus.jmdns</artifactId>
-            <version>${project.version}</version>
+            <version>${art2.version}</version>
         </dependency>
         
     </dependencies>
