Fixe Art2 Channel cluster
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12740 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 19f4dd1b49cc6240606b7e6a3aadf098a5d5d1e0

--- a/art2_projects/org.kermeta.art2.framework.baseLib/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework.baseLib/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>art2.framework</artifactId>
             <version>${art2.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.6.1</version>
+        </dependency>
     </dependencies>
 
 </project>
