added missing modules
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12745 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 8b4c26e7102e37c1db0f9cf76b27922c4e92931f

--- a/art2_projects/pom.xml
+++ b/art2_projects/pom.xml
@@ -28,12 +28,13 @@
         <module>org.kermeta.art2.root</module>
         <module>org.kermeta.art2.artcomponent.root</module>
         <module>org.kermeta.art2.model</module>
-        <!-- <module>org.kermeta.art2.model.edit</module>
-        <module>org.kermeta.art2.model.editor</module> -->
-        <!-- <module>org.kermeta.art2.editor.eclipse</module> -->
+        <module>org.kermeta.art2.model.edit</module>
+        <module>org.kermeta.art2.model.editor</module>
+        <module>org.kermeta.art2.editor.eclipse</module>
         <!-- <module>org.kermeta.art2.editor.nb</module> -->
         <module>org.kermeta.art2.adaptation.model</module>
-        
+        <module>org.kermeta.art2.ui.framework</module>
+        <module>org.kermeta.art2.ui.editor</module>
         <module>org.kermeta.art2.annotation</module>
         
         <module>org.kermeta.art2.api</module>
