Fix Art2 unbind problem on stopped component
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12751 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 189c01a54131784473fb89b6d4fbd15f5702f9fd

--- a/art2_projects/org.kermeta.art2.platform.felix/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.felix/pom.xml
@@ -13,7 +13,7 @@
     </parent>
 
     <properties>
-        <art2.node.name>duke.irisa.fr</art2.node.name>
+        <art2.node.name>duke</art2.node.name>
         <org.osgi.framework.system.packages.extra>sun.misc</org.osgi.framework.system.packages.extra>
     </properties>
 
