Fix Art2 unbind problem on stopped component
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12756 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: f1e864650cb6a656deaf3d6b7c8cb94096372003

--- a/art2_projects/org.kermeta.art2.framework.baseLib/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework.baseLib/pom.xml
@@ -25,4 +25,23 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <!-- Override BnD plugin config -->
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.1.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Import-Package>org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
+                        <Export-Package>org.kermeta.art2.framework.baselib.channeltype.*</Export-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
 </project>
