--- a/art2_projects/org.kermeta.art2.kompare/pom.xml
+++ b/art2_projects/org.kermeta.art2.kompare/pom.xml
@@ -57,5 +57,10 @@
             <artifactId>org.osgi.core</artifactId>
             <version>4.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.6.1</version>
+        </dependency>
     </dependencies>
 </project>
