--- a/art2_projects/org.kermeta.art2.platform.android/AndroidManifest.xml
+++ b/art2_projects/org.kermeta.art2.platform.android/AndroidManifest.xml
@@ -14,7 +14,13 @@
     <uses-permission android:name="android.permission.WRITE_OWNER_DATA" />
     <uses-permission android:name="android.permission.READ_OWNER_DATA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" /> <!-- Allow multicast over WiFi connections -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- Location based on WiFi -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" /> <!-- Force WiFi scans for location based on WiFi -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- Location based on GSM cell IDs -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- Location based on GPS -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- Required for WiFi management -->
+    <uses-permission android:name="android.permission.VIBRATE" /> <!-- Allow vibration -->
 
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
@@ -25,10 +31,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".AndroidFelixService" android:enabled="true">
-            <intent-filter>
-                <action android:name=".AndroidFelixService.ACTION" />
-            </intent-filter>
+        <service android:name=".AndroidFelixService" android:enabled="true" android:exported="true">
         </service>
 
         <receiver android:name=".AndroidFelixServiceBootReceiver">
