--- a/art2_projects/org.kermeta.art2.framework.baseLib/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework.baseLib/pom.xml
@@ -35,7 +35,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Import-Package>org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
+                        <Import-Package>!org.kermeta.art2.framework.baselib.channeltype,org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
                         <Export-Package>org.kermeta.art2.framework.baselib.channeltype.*</Export-Package>
                     </instructions>
                 </configuration>
