--- a/art2_projects/pom.xml
+++ b/art2_projects/pom.xml
@@ -41,9 +41,11 @@
         <module>org.kermeta.art2.framework</module>
         <module>org.kermeta.art2.core</module>
         <module>org.kermeta.art2.framework.bus.netty</module>
+        <module>org.kermeta.art2.framework.bus.jmdns</module>
         <module>org.kermeta.art2.deploy.osgi</module>
         <module>org.kermeta.art2.kompare</module>
         <module>org.kermeta.art2.platform.felix</module>
+        <module>org.kermeta.art2.framework.baseLib</module>
     </modules>
 
 	
