--- a/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
+++ b/log4j_projects/org.kermeta.slf4j.eclipse/pom.xml
@@ -13,8 +13,8 @@
 	<name>Utils :: SLF4J eclipse</name>
 	
 	<parent>
-		<groupId>org.kermeta.language</groupId>
-        <artifactId>language.root</artifactId>
+		<groupId>org.kermeta.utils</groupId>
+        <artifactId>utils.root</artifactId>
         <version>2.0.0-SNAPSHOT</version>
 	</parent>
 		
