Add ContainerNode to Instance Model
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12811 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 858bffc92c77a0f5c8bc5b11431c45df449a5979

--- a/art2_projects/org.kermeta.art2.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.model/pom.xml
@@ -19,19 +19,39 @@
         <sourceDirectory>src</sourceDirectory>
         <!-- Add resources from the plugin structure -->
         <resources>
-	      	<resource>
-	        	<directory>.</directory>
-	        	<includes>
-	          		<include>plugin.xml</include>
-	          		<include>plugin.properties</include>
-	        	</includes>
-	      	</resource>
-	      	<resource>
-	        	<directory>metamodel</directory>
-	        	<targetPath>metamodel</targetPath>
-	      	</resource>
-	    </resources>
+            <resource>
+                <directory>.</directory>
+                <includes>
+                    <include>plugin.xml</include>
+                    <include>plugin.properties</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>metamodel</directory>
+                <targetPath>metamodel</targetPath>
+            </resource>
+        </resources>
         <plugins>
+
+<!--
+            <plugin>
+                <groupId>org.kermeta.emf</groupId>
+                <artifactId>org.kermeta.emf.genmodel</artifactId>
+                <version>2.6.0</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals><goal>generate</goal></goals>
+                        <configuration>
+                            <ecore>metamodel/art.ecore</ecore>
+                            <output>${project.build.sourceDirectory}</output>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+-->
+
 
 			<!-- Creation of the bundle jar and its manifest -->
             <plugin>
