--- a/art2_projects/org.kermeta.art2.platform.felix/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.felix/pom.xml
@@ -28,6 +28,17 @@
                         <param>--log=DEBUG</param>
                         <param>--workingDirectory=target/runner</param>
                     </provision>
+
+                    <deployURLs>
+                        mvn:http://duke.irisa.fr/maven2!org.kermeta.art2/art2.framework.bus.netty,
+                        mvn:http://duke.irisa.fr/maven2!org.kermeta.art2/art2.framework.bus.jmdns
+                        <!--
+                        file:/Applications/eclipse/eclipse35/plugins/org.eclipse.equinox.launcher_1.0.201.R35x_v20090715.jar,
+                        file:/Applications/eclipse/eclipse35/plugins/org.eclipse.equinox.common_3.5.1.R35x_v20090807-1100.jar,
+                        file:/Applications/eclipse/eclipse35/plugins/org.eclipse.update.configurator_3.3.0.v20090312.jar
+                        -->
+                    </deployURLs>
+
                 </configuration>
             </plugin>
         </plugins>
@@ -143,6 +154,7 @@
         </dependency>
 -->
 
+<!--
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.framework.bus.netty</artifactId>
@@ -154,7 +166,7 @@
             <artifactId>art2.framework.bus.jmdns</artifactId>
             <version>${art2.version}</version>
         </dependency>
-        
+      -->
     </dependencies>
 
 </project>
