--- a/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo.test/pom.xml
+++ b/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo.test/pom.xml
@@ -182,7 +182,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
-            <version>2.8.0.RC1</version>
+            <version>2.8.0</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
@@ -204,12 +204,13 @@
             <version>1.5.0</version>
         </dependency> 
         <dependency>
-            <groupId>fr.irisa.triskell</groupId>
-            <artifactId>kermeta.scala.framework</artifactId>
+            <groupId>org.kermeta.language</groupId>
+            <artifactId>language.framework.scala</artifactId>
             <version>0.0.5</version>
+            <type>jar</type>
             <scope>compile</scope>
         </dependency>
-		
+        		
         <dependency>
             <groupId>fr.irisa.triskell</groupId>
             <artifactId>kermeta_standalone</artifactId>
