Art2Actor improve
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12880 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 32167dbcc0e5be562a174a037141584dfca4946a

--- a/art2_projects/org.kermeta.art2.platform.felix/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.felix/pom.xml
@@ -30,10 +30,10 @@
                     </provision>
 
                     <deployURLs>
-                        mvn:http://duke.irisa.fr/maven2!org.kermeta.art2/art2.framework.bus.netty,
-                        mvn:http://duke.irisa.fr/maven2!org.kermeta.art2/art2.framework.bus.jmdns,
-                        mvn:http://duke.irisa.fr/maven2!org.kermeta.art2/art2.framework,
-                        mvn:http://duke.irisa.fr/maven2!org.kermeta.art2/art2.deploy.osgi
+                        mvn:org.kermeta.art2/art2.framework.bus.netty,
+                        mvn:org.kermeta.art2/art2.framework.bus.jmdns,
+                        mvn:org.kermeta.art2/art2.framework,
+                        mvn:org.kermeta.art2/art2.deploy.osgi
                         
                         <!--
                         file:/Applications/eclipse/eclipse35/plugins/org.eclipse.equinox.launcher_1.0.201.R35x_v20090715.jar,
