OSGI import improve
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12886 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 4b7433758f092c1797c562e331321fab9a05a051

--- a/art2_projects/org.kermeta.art2.ui.editor/pom.xml
+++ b/art2_projects/org.kermeta.art2.ui.editor/pom.xml
@@ -39,4 +39,22 @@
     </dependencies>
 
 
+    <build>
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Import-Package>!org.kermeta.art2.ui.editor.*,!org.kermeta.art2.ui.aspects.*,org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
+                        <Private-Package>org.kermeta.art2.ui.editor.*,org.kermeta.art2.ui.aspects.*</Private-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
 </project>
