--- a/art2_projects/org.kermeta.art2.api/pom.xml
+++ b/art2_projects/org.kermeta.art2.api/pom.xml
@@ -13,16 +13,6 @@
         <version>2.2.0-SNAPSHOT</version>
     </parent>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.0.1</version>
-                <extensions>true</extensions>
-            </plugin>
-        </plugins>
-    </build>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -34,6 +24,26 @@
             <artifactId>art2.model</artifactId>
             <version>${art2.version}</version>
         </dependency>
-
     </dependencies>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-ClassPath>.</Bundle-ClassPath>
+                        <Import-Package>org.kermeta.art2adaptation,org.kermeta.art2,scala.*</Import-Package>
+                        <Export-Package>org.kermeta.art2.api.*</Export-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
+
+
 </project>
