--- a/art2_projects/org.kermeta.art2.core/pom.xml
+++ b/art2_projects/org.kermeta.art2.core/pom.xml
@@ -57,13 +57,13 @@
             <artifactId>org.osgi.compendium</artifactId>
             <version>4.2.0</version>
         </dependency>
-        <!--
+
+
         <dependency>
             <groupId>net.lag</groupId>
             <artifactId>configgy</artifactId>
             <version>2.8.0-1.5.5</version>
         </dependency>
-        -->
     </dependencies>
 
 
@@ -80,8 +80,7 @@
                         <Private-Package>
                             org.kermeta.art2.core.impl
                         </Private-Package>
-                        <Export-Package>
-                        </Export-Package>
+                        <Export-Package>net.lag.*</Export-Package>
                         <Bundle-Activator>org.kermeta.art2.core.impl.Art2CoreActivator</Bundle-Activator>
                     </instructions>
                 </configuration>
@@ -90,4 +89,13 @@
         </plugins>
 
     </build>
+
+    <repositories>
+        <repository>
+            <id>Akka</id>
+            <name>Akka Maven2 Repository</name>
+            <url>http://www.scalablesolutions.se/akka/repository/ </url>
+        </repository>
+    </repositories>
+
 </project>
