--- a/art2_projects/org.kermeta.art2.platform.felix/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.felix/pom.xml
@@ -30,11 +30,12 @@
                     </provision>
 
                     <deployURLs>
+                        <!--
                         mvn:org.kermeta.art2/art2.framework.bus.netty,
                         mvn:org.kermeta.art2/art2.framework.bus.jmdns,
                         mvn:org.kermeta.art2/art2.framework,
                         mvn:org.kermeta.art2/art2.deploy.osgi
-                        
+                        -->
                         <!--
                         file:/Applications/eclipse/eclipse35/plugins/org.eclipse.equinox.launcher_1.0.201.R35x_v20090715.jar,
                         file:/Applications/eclipse/eclipse35/plugins/org.eclipse.equinox.common_3.5.1.R35x_v20090807-1100.jar,
@@ -81,19 +82,19 @@
             <version>${art2.version}</version>
         </dependency>
 
-        <!--
+        
         <dependency>
             <groupId>org.kermeta.art2</groupId>
             <artifactId>art2.framework</artifactId>
             <version>${art2.version}</version>
         </dependency>
--->
-<!--
+
+
         <dependency>
             <groupId>org.kermeta.art2</groupId>
             <artifactId>art2.deploy.osgi</artifactId>
             <version>${art2.version}</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <artifactId>art2.adaptation.model</artifactId>
             <groupId>org.kermeta.art2</groupId>
@@ -160,7 +161,7 @@
         </dependency>
 -->
 
-<!--
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.framework.bus.netty</artifactId>
@@ -172,7 +173,7 @@
             <artifactId>art2.framework.bus.jmdns</artifactId>
             <version>${art2.version}</version>
         </dependency>
-      -->
+      
     </dependencies>
 
 </project>
