Add ConfigService usage
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12920 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: d26867befde01d7389c24b5466a7a8fcd6c8edc4

--- a/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
@@ -54,6 +54,22 @@
             <artifactId>art2.framework</artifactId>
             <version>${art2.version}</version>
         </dependency>
+
+
+
+        <!-- Use to output logger message in APT phase -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>0.9.24</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>0.9.24</version>
+        </dependency>
+
+
     </dependencies>
 
 
