Improve synch command
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12992 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 2c635645be8cbfc72cc9148b026a826e16895f6f

--- a/art2_projects/org.kermeta.art2.ui.editor/pom.xml
+++ b/art2_projects/org.kermeta.art2.ui.editor/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>art2.framework.bus.netty</artifactId>
             <version>${art2.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>art2.framework.bus.jmdns</artifactId>
+            <version>${art2.version}</version>
+        </dependency>
+
     </dependencies>
 
 
