--- a/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo.test/pom.xml
+++ b/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo.test/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.irisa.triskell</groupId>
     <artifactId>kermtea.scala.compilo.test</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.3-SNAPSHOT</version>
 	
     <repositories>
         <repository>
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>fr.irisa.triskell</groupId>
             <artifactId>kermeta.compilo.scala</artifactId>
-            <version>0.0.2-BETA3</version>
+            <version>0.0.2-BETA4</version>
             <scope>compile</scope>
 
             <exclusions>
@@ -105,24 +105,9 @@
             <version>1.3.0</version>
         </dependency>
         <dependency>
-            <groupId>fr.irisa.triskell</groupId>
-            <artifactId>kermeta.emf</artifactId>
-            <version>2.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>fr.irisa.triskell</groupId>
-            <artifactId>kermeta.emf.common</artifactId>
-            <version>2.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>fr.irisa.triskell</groupId>
-            <artifactId>kermeta.emf.ecore</artifactId>
-            <version>2.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>fr.irisa.triskell</groupId>
-            <artifactId>kermeta.emf.ecore.xmi</artifactId>
-            <version>2.5.0</version>
+            <groupId>org.kermeta.emf</groupId>
+            <artifactId>emf.lib</artifactId>
+            <version>2.6.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -206,7 +191,7 @@
         <dependency>
             <groupId>org.kermeta.language</groupId>
             <artifactId>language.framework.scala</artifactId>
-            <version>0.0.5</version>
+            <version>0.0.6</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
