--- a/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo/pom.xml
+++ b/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo/pom.xml
@@ -7,7 +7,7 @@
     <name>fr.irisa.triskell.kermeta.compilo.scala</name>
     <version>0.0.2-BETA4</version>
     <description>Kermeta Compiler V2</description>
-    <packaging>bundle</packaging>
+    <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
