Fix javax.management import for Android
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13031 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 34581edbe9e9439cfb907dc3c0e858f3f33ac289

--- a/art2_projects/org.kermeta.art2.core/pom.xml
+++ b/art2_projects/org.kermeta.art2.core/pom.xml
@@ -76,7 +76,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-ClassPath>.</Bundle-ClassPath>
-                        <Import-Package>org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
+                        <Import-Package>!javax.management,org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
                         <Private-Package>
                             org.kermeta.art2.core.impl
                         </Private-Package>
