git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13056 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: f16856157e2597ce2318a25b8af17333540b1a04

--- a/hudson_jobs/provision_eclipse_helios_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_helios_bases_for_kermeta/build.xml
@@ -2,13 +2,14 @@
 
 	<property name="env.WORKSPACE" location="."/>
 	<!-- Change this according to the computer running the script -->
-	<!-- <property name="eclipse.native.version.name" value="linux_x86_64"/>
+	<property name="eclipse.native.version.name" value="linux_x86_64"/>
 	<property name="eclipse.native.archive.extension" value="tar.gz"/>
-	<property name="eclipse.native.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/R-3.6-201006080911/eclipse-platform-SDK-3.6-linux-gtk-x86_64.tar.gz"/>
-	-->
+	<property name="eclipse.native.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/R-3.6.1-201009090800/eclipse-platform-SDK-3.6.1-linux-gtk-x86_64.tar.gz"/>
+	<!--
 	<property name="eclipse.native.version.name" value="win32"/>
 	<property name="eclipse.native.archive.extension" value="zip"/>
 	<property name="eclipse.native.base.url" value="http://eclipse.ialto.org/eclipse/downloads/drops/R-3.6.1-201009090800/eclipse-platform-SDK-3.6.1-win32.zip"/>
+	-->
 	<!-- <property name="eclipse.version.name" value="linux_x86_64"/> -->
 	<!-- <property name="eclipse.base.dir" location="${env.WORKSPACE}/eclipse_${eclipse.version.name}_base"/> -->
 	<!-- <property name="target.eclipse.dir" location="${env.WORKSPACE}/build/kermeta_helios_${eclipse.version.name}_base"/> -->
